# txtblocks

./: .gitignore  README.md  README.rst  setup.cfg  tests.py  tests_txtblocks.py  txtblocks.py
txtblocks/: __init__.py  txtblocks.py
txtblocks/tests/: test_txtblocks.py
