[metadata]
name = txtblocks
author = Jochen Bartl
author-email = jochenbartl@mailbox.org
summary = Parser for screen scraping CLI output from network devices
description-file = README.rst
home-page = https://github.com/verbosemode/txtblocks
requires-python = >=2.7
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
keywords = parse
